# ovnis

./: .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.in  OUTPUT_FOLDER  README  README.md  README.rst  aclocal.m4  config.status  config_cluster.txt  configure  configure.ac  congestion_changes  correlation  edges_error_hybrid_cluster  edges_positions  g++  gcc  global_costs  libtool  make.txt  memckeck.txt  price.tsv  reliability  routes_info  routing_end  routing_start  scenarioSettings  selectedStrategies  simulation  tatus  vanet.dgs  x
dfsdhikhjlk/: fce.sumocfg  fixedTIS  global_costs  global_routing_strategies  input_additional.add.xml  input_definition20.def.xml  input_routes.rou.xml  local_costs  net.net.xml  routing  simulation  summary.xml  tripinfo.xml  vanet_routing_strategies
python/: analyse.py  howto.txt  runovnis.py
scenarios/Berkeley/: Berkeley.add.xml  Berkeley.gui.sumocfg  Berkeley.net.xml  Berkeley.rou.xml  duarouter.txt  flows.xml  scenario.sumocfg  tripinfo.xml
scenarios/Highway/: fce-gui.sumocfg  input_additional.equal.add.xml  input_definition7.def.xml  input_routes.equal.rou.xml  net.equal.net.xml  netstats.xml  scenario.sumocfg
scenarios/Kirchberg/: Kirchberg.gui.sumocfg  Kirchberg.rou.xml  Kirchberg.shapes.xml  Kirchberg_dump.add.xml  Kirchberg_fromduarouter.rou.xml  Kirchberg_fromduarouter2.rou.alt.xml  Kirchberg_fromduarouter2.rou.xml  Kirchberg_input_additional.add.xml  dump.xml  flows.xml  scenario.sumocfg  tlLogic.xml
scenarios/Luxembourg/: additional.add.xml  scenario.sumocfg
scenarios/Luxembourg/sumoOutput/: summary.xml  tripinfo.xml
scripts/: analyse.py  analyseSumo.py  analyse_bypass_capacity.txt  analyse_cheaters.txt  analyse_hybrid.txt  analyse_main_capacity.txt  analyse_probabilistic.txt  analyse_routing_end.txt  analyse_shortest.txt  howto.txt  readme.txt  run.txt  run_cluster.sh  run_test.sh  runovnis.py  ti_quality.rb
src/: Makefile  Makefile.am  Makefile.in  channel-cell.lo  closeQuery.lo  command.lo  config.h  config.h.in  edge.cpp  edge.h  edge.lo  edgeInfo.cpp  edgeInfo.h  edgeInfo.lo  edgeQuery.lo  itinerary.cpp  itinerary.h  itinerary.lo  knowledge.cpp  knowledge.h  laneQuery.lo  libovnis.la  log.cpp  log.h  log.lo  ovnis-adhoc-wifi-mac.lo  ovnis-application.lo  ovnis-constants.h  ovnis-error-rate-model.lo  ovnis-wifi-channel.lo  ovnis-wifi-helper.lo  ovnis-wifi-phy.lo  ovnis.cpp  ovnis.h  ovnis.lo  ovnisPacket.cpp  ovnisPacket.h  ovnisPacket.lo  recordEntry.cpp  recordEntry.h  (+24 more)
src/.deps/: channel-cell.Plo  closeQuery.Plo  command.Plo  edge.Plo  edgeInfo.Plo  edgeQuery.Plo  itinerary.Plo  laneQuery.Plo  log.Plo  ovnis-adhoc-wifi-mac.Plo  ovnis-application.Plo  ovnis-error-rate-model.Plo  ovnis-wifi-channel.Plo  ovnis-wifi-helper.Plo  ovnis-wifi-phy.Plo  ovnis.Plo  ovnisPacket.Plo  query.Plo  recordEntry.Plo  route.Plo  scenario.Plo  simStepQuery.Plo  simulationQuery.Plo  socket.Plo  status.Plo  storage.Plo  subscribeQuery.Plo  sumoTraciConnection.Plo  traci-client.Plo  traciException.Plo  vehicle.Plo  vehicleQuery.Plo  xml-sumo-conf-parser.Plo
src/.libs/: libovnis.la  libovnis.lai
src/applications/: ovnis-application.cpp  ovnis-application.h  trafficInformationSystem.cpp  trafficInformationSystem.h
src/applications/dissemination/: dataPacket.cpp  dataPacket.h  dissemination.cpp  dissemination.h
src/common/: commonHelper.cpp  commonHelper.h  myEnergy-tag.cc  myEnergy-tag.h  myTxEnergy-tag.cc  myTxEnergy-tag.h
src/devices/beaconing-wifi/: beaconing-adhoc-wifi-mac-original.cc  beaconing-adhoc-wifi-mac.cc  beaconing-adhoc-wifi-mac.h  channel-cell.cpp  ovnis-error-rate-model.h  ovnis-wifi-channel.cc  ovnis-wifi-phy-original.cc  ovnis-wifi-phy-original.h  ovnis-wifi-phy.cc  ovnis-wifi-phy.h
src/devices/common/: myMessageID-header.cc  myMessageID-header.h  myTxEnergy-tag.cc
src/devices/wifi/: beaconing-adhoc-wifi-mac-energy.h  beaconing-adhoc-wifi-mac-original.cc  beaconing-adhoc-wifi-mac.cc  beaconing-adhoc-wifi-mac.h  channel-cell.cpp  channel-cell.h  ovnis-adhoc-wifi-mac.cc  ovnis-adhoc-wifi-mac.h  ovnis-error-rate-model.cc  ovnis-wifi-channel.cc  ovnis-wifi-channel.h  ovnis-wifi-phy.cc  ovnis-wifi-phy.h
src/helper/: ovnis-wifi-helper.cc  ovnis-wifi-helper.h
src/traci/: socket.cpp  storage.h  structs.h  sumoTraciConnection.cpp  sumoTraciConnection.h  traci-client.cc  traci-client.h  traciException.cpp  traciException.h
src/traci/protocol/: command.cpp  command.h  status.cpp  status.h
src/traci/query/: closeQuery.cpp  closeQuery.h  edgeQuery.cpp  edgeQuery.h  laneQuery.cpp  laneQuery.h  query.cpp  query.h  simStepQuery.cpp  simStepQuery.h  simulationQuery.cpp  simulationQuery.h  subscribeQuery.cpp  subscribeQuery.h  vehicleQuery.cpp  vehicleQuery.h
src/traci/socket15/: socket.cpp  socket.h  storage.cpp
test/: Copy of simple-traffic-application-main.cc  Kirchberg of simple-traffic-application-main.cc  Makefile  Makefile.am  Makefile.in  my-constants.h  ovnisFce  ovnisSample  simple-traffic-application-main.cc
test/.deps/: FceApplication.Po  simple-traffic-application-main.Po
test/.libs/: ovnisSample
test/FCE/: aggregated_60.xml  fce (copy).sumocfg  fce.sumocfg  input_additional.add.xml  input_connections.con.xml  input_definition.def.xml  input_definition2.def.xml  input_definition3.def.xml  input_edges.edg.xml  input_nodes.nod.xml  input_routes.rou.xml  net.net.xml  netconverter.netccfg  summary.xml  tripinfo.xml
test/Luxembourg15/: Kirchberg .gui.sumocfg  Kirchberg.add.xml  Kirchberg.rou.alt.xml  Kirchberg.sumocfg  Kirchberg_2cars.rou.xml  Kirchberg_dump.add.xml  Kirchberg_loops.add.xml  duarouter.txt  tlLogic-swiatla.xml
test/applications/: CommunityApplication.cpp  CommunityApplication.h  DsrApplication.cpp  DsrApplication.h  DssApplication.cpp  DssApplication.h  FceApplication.cpp  FceApplication.h  TestApplication.cpp  TestApplication.h
tests/: AllTests.cpp  Makefile  Makefile.am  Makefile.in  TraciClientTest.cpp
